--- a/index.html
+++ b/index.html
@@ -1,233 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Rachana | Data Analyst / Data Engineer</title>
-    <meta
-      name="description"
-      content="Portfolio of Rachana — Data Analyst / Data Engineer (SQL, Python, AWS, Power BI)."
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Rachana | Portfolio</title>
+  <meta name="description" content="Rachana — Business Analyst / Data Analyst portfolio." />
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-  <body>
-    <header class="header">
-      <nav class="nav">
-        <a class="brand" href="#top">Rachana</a>
+<body>
+  <!-- Top progress bar -->
+  <div class="progress" aria-hidden="true"><div id="progressBar"></div></div>
 
-        <button class="menuBtn" id="menuBtn" aria-label="Open menu">
-          ☰
-        </button>
+  <!-- Background -->
+  <div class="bg" aria-hidden="true">
+    <div class="orb o1"></div>
+    <div class="orb o2"></div>
+    <div class="orb o3"></div>
+    <div class="noise"></div>
+  </div>
 
-        <div class="navLinks" id="navLinks">
-          <a href="#about">About</a>
-          <a href="#skills">Skills</a>
-          <a href="#projects">Projects</a>
-          <a href="#experience">Experience</a>
-          <a href="#contact">Contact</a>
-          <a class="pill" href="#resume">Resume</a>
-        </div>
+  <!-- NAV -->
+  <header class="header" id="header">
+    <div class="nav">
+      <a class="brand" href="#top" aria-label="Home">
+        <span class="logoDot"></span>
+        <span>Rachana</span>
+      </a>
+
+      <nav class="links" id="navLinks" aria-label="Primary">
+        <a href="#about" data-section="about">About</a>
+        <a href="#skills" data-section="skills">Skills</a>
+        <a href="#projects" data-section="projects">Projects</a>
+        <a href="#experience" data-section="experience">Experience</a>
+        <a href="#contact" data-section="contact" class="pill">Contact</a>
       </nav>
-    </header>
 
-    <main id="top" class="container">
-      <section class="hero">
-        <div class="heroLeft">
-          <p class="kicker">Data Analyst / Data Engineer</p>
-          <h1 class="title">
-            I build clean, reliable data pipelines and dashboards that help teams
-            make faster decisions.
-          </h1>
-          <p class="subtitle">
-            SQL • Python • AWS • Power BI • Tableau • ETL/ELT • Analytics
-          </p>
+      <div class="navRight">
+        <button class="iconBtn" id="themeBtn" aria-label="Toggle theme" title="Theme">
+          <span id="themeIcon">◐</span>
+        </button>
+        <button class="iconBtn menuBtn" id="menuBtn" aria-label="Open menu" title="Menu">☰</button>
+      </div>
+    </div>
 
-          <div class="ctaRow">
-            <a class="btn primary" href="#projects">View Projects</a>
-            <a class="btn" href="#contact">Contact</a>
+    <!-- Mobile menu panel -->
+    <div class="mobilePanel" id="mobilePanel" aria-label="Mobile menu">
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#experience">Experience</a>
+      <a href="#contact" class="pill">Contact</a>
+    </div>
+  </header>
+
+  <main id="top" class="container">
+
+    <!-- HERO -->
+    <section class="hero">
+      <div class="heroLeft">
+        <p class="kicker">Business Analyst • Data Analyst • Data Engineer</p>
+
+        <h1 class="title">
+          Helping teams understand the <span class="accent">why</span> behind the numbers.
+        </h1>
+
+        <p class="subtitle">
+          KPI design • SQL analysis • Power BI dashboards • AWS-based pipelines • Automation with Python
+        </p>
+
+        <div class="cta">
+          <a class="btn primary" href="#projects">View Projects</a>
+          <a class="btn" href="#contact">Contact</a>
+          <a class="btn ghost" href="Rachana_Resume.pdf" target="_blank" rel="noreferrer">Resume PDF</a>
+        </div>
+
+        <div class="social">
+          <!-- Replace these -->
+          <a href="https://github.com/" target="_blank" rel="noreferrer">GitHub</a>
+          <a href="https://www.linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a>
+          <a href="mailto:yourname@email.com">Email</a>
+        </div>
+      </div>
+
+      <div class="heroRight">
+        <div class="card statCard">
+          <div class="stat">
+            <div class="num">10M+</div>
+            <div class="lbl">records handled</div>
           </div>
-
-          <div class="linkRow">
-            <!-- Replace these with your real links -->
-            <a href="https://github.com/" target="_blank" rel="noreferrer">GitHub</a>
-            <a href="https://www.linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a>
-            <a href="#resume">Resume</a>
+          <div class="stat">
+            <div class="num">8–12</div>
+            <div class="lbl">dashboards shipped</div>
+          </div>
+          <div class="stat">
+            <div class="num">30–45%</div>
+            <div class="lbl">effort reduced</div>
+          </div>
+          <div class="stat">
+            <div class="num">AWS</div>
+            <div class="lbl">S3 • Glue • Lambda</div>
           </div>
         </div>
 
-        <div class="heroCard">
-          <div class="statGrid">
-            <div class="stat">
-              <div class="statNum">10M+</div>
-              <div class="statLabel">Records processed</div>
-            </div>
-            <div class="stat">
-              <div class="statNum">30–45%</div>
-              <div class="statLabel">Efficiency gains</div>
-            </div>
-            <div class="stat">
-              <div class="statNum">8–12</div>
-              <div class="statLabel">Power BI dashboards</div>
-            </div>
-            <div class="stat">
-              <div class="statNum">AWS</div>
-              <div class="statLabel">S3 • Glue • Lambda • Athena</div>
-            </div>
+        <div class="card miniCard">
+          <div class="row">
+            <span class="badge">Open to roles</span>
+            <span class="muted">Business Analyst / Data Analyst</span>
           </div>
-          <p class="note">
-            Tip: Replace metrics above with your exact numbers if you want.
+          <p class="muted small">
+            Clean layout, smooth motion, and a premium navbar.
           </p>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section id="about" class="section">
+    <!-- ABOUT -->
+    <section id="about" class="section reveal">
+      <div class="sectionHead">
         <h2>About</h2>
-        <p>
-          I’m Rachana, a Master’s in Data Science graduate (UMBC, May 2024) with
-          experience across analytics and data engineering. I work with SQL and
-          Python to analyze large datasets, build automated reporting, and deliver
-          Power BI dashboards. I’m also comfortable building cloud-based ETL
-          pipelines on AWS.
+        <p class="muted">
+          Master’s in Data Science (UMBC, May 2024). I translate business questions into clean metrics,
+          dashboards, and analysis that leaders can act on.
         </p>
-      </section>
+      </div>
 
-      <section id="skills" class="section">
+      <div class="aboutGrid">
+        <div class="card">
+          <h3>What I do</h3>
+          <p class="muted">
+            KPI definition, variance analysis, stakeholder reporting, dashboard design, and ad-hoc SQL.
+            I also automate repeatable workflows using Python.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>What I use</h3>
+          <p class="muted">
+            SQL, Python, Power BI, Tableau, AWS (S3/Glue/Lambda/Athena), plus basic streaming (Kafka).
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- SKILLS -->
+    <section id="skills" class="section reveal">
+      <div class="sectionTop">
         <h2>Skills</h2>
+        <input id="skillSearch" class="input" placeholder="Search skills (SQL, AWS, Power BI)..." />
+      </div>
+      <div class="chips" id="skillsWrap"></div>
+    </section>
 
-        <div class="chips">
-          <span class="chip">SQL (CTEs, Window Functions)</span>
-          <span class="chip">Python (Pandas, PySpark)</span>
-          <span class="chip">AWS (S3, Glue, Lambda, Athena)</span>
-          <span class="chip">Power BI (DAX, Power Query)</span>
-          <span class="chip">Tableau</span>
-          <span class="chip">ETL/ELT • Data Modeling</span>
-          <span class="chip">Kafka (Streaming)</span>
-          <span class="chip">Git • Docker</span>
-        </div>
-      </section>
+    <!-- PROJECTS -->
+    <section id="projects" class="section reveal">
+      <div class="sectionTop">
+        <h2>Projects</h2>
+        <div class="filters" id="filters"></div>
+      </div>
+      <div class="grid" id="projectsGrid"></div>
+    </section>
 
-      <section id="projects" class="section">
-        <div class="row">
-          <h2>Projects</h2>
-          <a class="smallLink" href="https://github.com/" target="_blank" rel="noreferrer">
-            View all on GitHub →
-          </a>
-        </div>
-
-        <div class="grid">
-          <article class="card">
-            <h3>AWS Data Lakehouse Pipeline</h3>
-            <p>
-              Built a medallion-style lakehouse using S3, Glue, Lambda, Step Functions,
-              Athena/Redshift and dashboards for business reporting.
-            </p>
-            <div class="tags">
-              <span>AWS</span><span>PySpark</span><span>ETL</span><span>Lakehouse</span>
-            </div>
-            <div class="cardLinks">
-              <a href="https://github.com/" target="_blank" rel="noreferrer">GitHub</a>
-              <a href="#" class="muted">Case Study</a>
-            </div>
-          </article>
-
-          <article class="card">
-            <h3>Kafka Clickstream Streaming Pipeline</h3>
-            <p>
-              Real-time ingestion with Kafka + Connect, Python consumers, PostgreSQL sink,
-              and monitoring via Grafana.
-            </p>
-            <div class="tags">
-              <span>Kafka</span><span>Python</span><span>PostgreSQL</span><span>Docker</span>
-            </div>
-            <div class="cardLinks">
-              <a href="https://github.com/" target="_blank" rel="noreferrer">GitHub</a>
-              <a href="#" class="muted">Architecture</a>
-            </div>
-          </article>
-
-          <article class="card">
-            <h3>Power BI Sales Dashboard</h3>
-            <p>
-              Built an interactive KPI dashboard with DAX measures, data modeling,
-              and executive-ready visuals for decision support.
-            </p>
-            <div class="tags">
-              <span>Power BI</span><span>DAX</span><span>Modeling</span><span>KPIs</span>
-            </div>
-            <div class="cardLinks">
-              <a href="#" class="muted">Demo</a>
-              <a href="https://github.com/" target="_blank" rel="noreferrer">Files</a>
-            </div>
-          </article>
-        </div>
-      </section>
-
-      <section id="experience" class="section">
-        <h2>Experience</h2>
-
-        <div class="timeline">
-          <div class="item">
-            <div class="itemTop">
-              <h3>Business Analyst — NB Alpha Omega</h3>
-              <span class="meta">Sep 2024 – Present</span>
-            </div>
-            <ul>
-              <li>Built data ingestion and reporting datasets for operational and campaign analytics.</li>
-              <li>Developed and maintained Power BI dashboards used in weekly/monthly reviews.</li>
-              <li>Wrote optimized SQL for ad-hoc analysis across large tables.</li>
-              <li>Automated reporting and checks in Python to reduce manual work.</li>
-            </ul>
+    <!-- EXPERIENCE -->
+    <section id="experience" class="section reveal">
+      <h2>Experience</h2>
+      <div class="timeline">
+        <article class="card item">
+          <div class="itemTop">
+            <h3>Business Analyst — NB Alpha Omega</h3>
+            <span class="muted">Sep 2024 – Present</span>
           </div>
+          <ul class="muted">
+            <li>Built KPI dashboards and reporting datasets used in weekly and monthly business reviews.</li>
+            <li>Wrote optimized SQL for ad-hoc analysis on large tables to support faster decisions.</li>
+            <li>Automated recurring checks and reporting using Python to reduce manual effort.</li>
+          </ul>
+        </article>
 
-          <div class="item">
-            <div class="itemTop">
-              <h3>Project Engineer — Wipro</h3>
-              <span class="meta">May 2021 – Jun 2022</span>
-            </div>
-            <ul>
-              <li>Supported analytics and reporting workflows using SQL and BI tools.</li>
-              <li>Worked with stakeholders to define KPIs and deliver dashboards.</li>
-            </ul>
+        <article class="card item">
+          <div class="itemTop">
+            <h3>Project Engineer — Wipro</h3>
+            <span class="muted">May 2021 – Jun 2022</span>
           </div>
-        </div>
-      </section>
+          <ul class="muted">
+            <li>Supported analytics and reporting workflows using SQL and BI tools.</li>
+            <li>Partnered with stakeholders to define KPIs and deliver dashboard updates.</li>
+          </ul>
+        </article>
+      </div>
+    </section>
 
-      <section id="resume" class="section">
-        <h2>Resume</h2>
-        <p>
-          Add your resume PDF into this repo and link it here.
-        </p>
-
-        <ol class="steps">
-          <li>Upload your PDF to this repo (example name: <b>Rachana_Resume.pdf</b>)</li>
-          <li>Update the link below to match the file name</li>
-        </ol>
-
-        <a class="btn primary" href="Rachana_Resume.pdf" target="_blank" rel="noreferrer">
-          Download Resume
-        </a>
-      </section>
-
-      <section id="contact" class="section">
+    <!-- CONTACT -->
+    <section id="contact" class="section reveal">
+      <div class="sectionTop">
         <h2>Contact</h2>
-        <p>Best way to reach me: email or LinkedIn.</p>
+        <div class="muted">Let’s connect. Email works best.</div>
+      </div>
 
-        <div class="contactCard">
-          <!-- Replace with your real email -->
-          <a class="btn primary" href="mailto:yourname@email.com">Email Me</a>
-          <a class="btn" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">
-            LinkedIn
-          </a>
+      <div class="contactCard card">
+        <div>
+          <div class="muted small">Email</div>
+          <div class="big">yourname@email.com</div>
         </div>
-      </section>
+        <div class="contactBtns">
+          <a class="btn primary" href="mailto:yourname@email.com">Email me</a>
+          <a class="btn" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a>
+        </div>
+      </div>
+    </section>
 
-      <footer class="footer">
-        <p>© <span id="year"></span> Rachana • Built on GitHub Pages</p>
-      </footer>
-    </main>
+    <footer class="footer">
+      <div class="muted small">© <span id="year"></span> Rachana • Built on GitHub Pages</div>
+    </footer>
+  </main>
 
-    <script src="script.js"></script>
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
-
